--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>💖 Valentine Surprise 💖</title>
+
   <style>
     body {
       margin: 0;
@@ -11,7 +12,7 @@
       display: flex;
       align-items: center;
       justify-content: center;
-      font-family: 'Segoe UI', sans-serif;
+      font-family: "Segoe UI", sans-serif;
       overflow: hidden;
     }
 
@@ -29,6 +30,7 @@
     h1 {
       color: #ff2e63;
       font-size: 1.9rem;
+      margin-bottom: 10px;
     }
 
     p {
@@ -42,8 +44,9 @@
 
     img {
       width: 100%;
-      border-radius: 15px;
-      margin: 15px 0;
+      border-radius: 20px;
+      margin: 12px 0;
+      box-shadow: 0 10px 30px rgba(255,46,99,0.4);
     }
 
     .buttons {
@@ -88,7 +91,7 @@
     .floating-heart {
       position: absolute;
       font-size: 20px;
-      color: rgba(255, 255, 255, 0.8);
+      color: rgba(255,255,255,0.8);
       animation: float 6s linear infinite;
     }
 
@@ -102,7 +105,7 @@
       margin-top: 20px;
       font-size: 1.05rem;
       color: #444;
-      line-height: 1.5;
+      line-height: 1.55;
       animation: fadeIn 1.5s ease;
     }
 
@@ -112,6 +115,7 @@
     }
   </style>
 </head>
+
 <body>
 
   <div class="card">
@@ -123,6 +127,10 @@
 
     <p id="subtext">You make my heart smile every single day.</p>
 
+    <!-- YOUR PHOTO -->
+    <img src="us.jpg" alt="Us together">
+
+    <!-- CUTE GIF -->
     <img src="https://media.giphy.com/media/l4pTdcifPZLpDjL1e/giphy.gif" alt="cute love gif">
 
     <div class="buttons" id="buttons">
@@ -130,6 +138,7 @@
       <button id="no">🙈 NO</button>
     </div>
 
+    <!-- LOVE LETTER (AFTER YES) -->
     <div class="love-letter" id="letter">
       My honey money, my dearest Marina,<br><br>
 
@@ -152,5 +161,39 @@
       heart.className = "floating-heart";
       heart.innerHTML = "❤️";
       heart.style.left = Math.random() * 100 + "vw";
-      heart.style.fontSize = Math.random()
+      heart.style.fontSize = Math.random() * 25 + 15 + "px";
+      document.body.appendChild(heart);
+      setTimeout(() => heart.remove(), 6000);
+    }
+    setInterval(createHeart, 250);
+
+    // Make buttons work after page loads
+    window.onload = function () {
+      const yesBtn = document.getElementById("yes");
+      const noBtn = document.getElementById("no");
+      const buttons = document.getElementById("buttons");
+      const question = document.getElementById("question");
+      const subtext = document.getElementById("subtext");
+      const letter = document.getElementById("letter");
+
+      if (noBtn) {
+        noBtn.addEventListener("mouseover", () => {
+          noBtn.style.left = Math.random() * 200 - 100 + "px";
+          noBtn.style.top = Math.random() * 200 - 100 + "px";
+        });
+      }
+
+      if (yesBtn) {
+        yesBtn.addEventListener("click", () => {
+          buttons.style.display = "none";
+          question.innerHTML = "💖 She said YES 💖";
+          subtext.style.display = "none";
+          letter.style.display = "block";
+        });
+      }
+    };
+  </script>
+
+</body>
+</html>
 
