--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
     <p id="subtext">You make my heart smile every single day.</p>
 
     <!-- YOUR PHOTO -->
-    <img src="us.jpg" alt="Us together">
+    <img src="us.jpeg" alt="Us together">
+
 
     <!-- CUTE GIF -->
     <img src="https://media.giphy.com/media/l4pTdcifPZLpDjL1e/giphy.gif" alt="cute love gif">
@@ -146,9 +147,7 @@
       girlfriend ever. You truly are one of a kind. I’m so happy you accepted my
       Valentine’s proposal — it means the world to me.<br><br>
 
-      You’re such a caring, kind-hearted, and unique soul. You thrive off making
-      others happy, and you deserve every single blessing this world has to offer,
-      baby. I love you so much, my Marina. ❤️<br><br>
+      Thank you for being my Valentine habibti ♥ <br><br>
 
       <strong>PS. Shaanyyyyyy</strong>
     </div>
