--- a/index.html
+++ b/index.html
@@ -128,7 +128,8 @@
     <p id="subtext">You make my heart smile every single day.</p>
 
     <!-- YOUR PHOTO -->
-    <img src="us.jpeg" alt="Us together">
+   <img src="images/us.jpeg" alt="Us together">
+
 
 
 
