--- a/index.html
+++ b/index.html
@@ -127,9 +127,8 @@
 
     <p id="subtext">You make my heart smile every single day.</p>
 
-  
-
-
+    <!-- YOUR PHOTO -->
+    <img src="us.jpg" alt="Us together">
 
     <!-- CUTE GIF -->
     <img src="https://media.giphy.com/media/l4pTdcifPZLpDjL1e/giphy.gif" alt="cute love gif">
@@ -146,7 +145,7 @@
       Thank you for being the most amazing, wonderful, authentic, and incredible
       girlfriend ever. You truly are one of a kind. I’m so happy you accepted my
       Valentine’s proposal — it means the world to me.<br><br>
-      Thank you for being my Valentine habibti ♥ <br><br>
+      Thank you for being my valentine mh❤️<br><br>
 
       <strong>PS. Shaanyyyyyy</strong>
     </div>
@@ -194,4 +193,3 @@
 
 </body>
 </html>
-
