--- a/index.html
+++ b/index.html
@@ -140,11 +140,11 @@
 
     <!-- LOVE LETTER (AFTER YES) -->
     <div class="love-letter" id="letter">
-      My honey money, my dearest Marina,<br><br>
+      My honey money, my dearest Marina, habibti<br><br>
 
       Thank you for being the most amazing, wonderful, authentic, and incredible
       girlfriend ever. You truly are one of a kind. I’m so happy you accepted my
-      Valentine’s proposal — it means the world to me.<br><br>
+      Valentine’s proposal — it means the world to me mh❤️<br><br>
       Thank you for being my valentine mh❤️<br><br>
 
       <strong>PS. Shaanyyyyyy</strong>
