--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     <p id="subtext">You make my heart smile every single day.</p>
 
     <!-- YOUR PHOTO -->
-    <img src="us.jpg" alt="Us together">
+    <img src="us.jpeg" alt="Us together">
 
     <!-- CUTE GIF -->
     <img src="https://media.giphy.com/media/l4pTdcifPZLpDjL1e/giphy.gif" alt="cute love gif">
