--- a/index.html
+++ b/index.html
@@ -42,13 +42,6 @@
       animation: beat 1.5s infinite;
     }
 
-    img {
-      width: 100%;
-      border-radius: 20px;
-      margin: 12px 0;
-      box-shadow: 0 10px 30px rgba(255,46,99,0.4);
-    }
-
     .buttons {
       margin-top: 15px;
     }
@@ -127,9 +120,6 @@
 
     <p id="subtext">You make my heart smile every single day.</p>
 
-    <!-- YOUR PHOTO -->
-    <img src="us.jpg" alt="Us together">
-
     <!-- CUTE GIF -->
     <img src="https://media.giphy.com/media/l4pTdcifPZLpDjL1e/giphy.gif" alt="cute love gif">
 
@@ -140,12 +130,14 @@
 
     <!-- LOVE LETTER (AFTER YES) -->
     <div class="love-letter" id="letter">
-      My honey money, my dearest Marina, habibti<br><br>
+      My honey money, my dearest Marina,<br><br>
 
       Thank you for being the most amazing, wonderful, authentic, and incredible
       girlfriend ever. You truly are one of a kind. I’m so happy you accepted my
-      Valentine’s proposal — it means the world to me mh❤️<br><br>
-      Thank you for being my valentine mh❤️<br><br>
+      Valentine’s proposal — it means the world to me.<br><br>
+      You’re such a caring, kind-hearted, and unique soul. You thrive off making
+      others happy, and you deserve every single blessing this world has to offer,
+      baby. I love you so much, my habibti. ❤️<br><br>
 
       <strong>PS. Shaanyyyyyy</strong>
     </div>
